<resources>
    <string name="app_name">同心</string>
    <string name="logo_text">同心</string>
    <string name="logo_text_sub">校园比赛组队平台</string>
    <string name="prompt_username">账号 限数字和大小写字母</string>
    <string name="prompt_password">密码 限数字和大小写字母以及.!@#%</string>
    <string name="input_username">请输入登录帐号</string>
    <string name="input_password">请输入登录密码</string>
    <string name="prompt_email">邮箱</string>
    <string name="action_login">登陆</string>
    <string name="action_register">注册新用户</string>
    <string name="action_reset_password">重置密码</string>
    <string name="action_return_login">返回登陆</string>
    <string name="empty_username">用户名不能为空!</string>
    <string name="empty_password">密码不能为空!</string>
    <string name="empty_subject">主题不能为空!</string>
    <string name="empty_content">内容不能为空!</string>
    <string name="empty_email">邮箱不能为空!</string>
    <string name="error_email">邮箱格式不正确!</string>
    <string name="title_forum">论坛</string>
    <string name="title_message">消息</string>
    <string name="title_info">个人中心</string>
    <string name="my_posts">我的帖子</string>
    <string name="my_comments">我的评论</string>
    <string name="my_favorite">我的收藏</string>
    <string name="my_collections">我的收藏</string>
    <string name="browser_history">浏览历史</string>
    <string name="sort_mode">排序方式</string>
    <string name="author">楼主</string>
    <string name="hint_comment">我也来说一句...</string>
    <string name="send_comment">发送</string>
    <string name="find_team_hint_subject">例xx比赛寻求队伍(必填)</string>
    <string name="find_teammate_hint_subject">例xx比赛寻求队友(必填)</string>
    <string name="hint_content">正文(必填)</string>
    <string name="content">正文：</string>
    <string name="self_introduction">个人描述：</string>
    <string name="self_introduction_center">个人描述</string>
    <string name="team_introduction">队伍描述：</string>
    <string name="team_introduction_center">队伍描述</string>
    <string name="hint_self_introduction">可描述个人技术面(选填)</string>
    <string name="hint_team_introduction">可描述当前队伍情况(选填)</string>
    <string name="publish">发表</string>
    <string name="publish_post">发表帖子</string>
    <string name="succeed_publish">发表成功</string>
    <string name="failed_publish">发表失败！</string>
    <string name="succeed_login">登录成功！</string>
    <string name="failed_login">登录失败，请确认网络连接后再重试。</string>
    <string name="succeed_register">注册成功！</string>
    <string name="failed_register">注册失败，请确认网络连接后再重试。</string>
    <string name="succeed_reset_password">密码重置成功，请到邮箱修改密码后再登录。</string>
    <string name="failed_reset_password">密码重置失败，请确认网络连接后再重试。</string>
    <string name="goto_login">登录之后才能发表帖子。</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="no_more_data">暂无更多数据</string>
    <string name="tourist">游客</string>
    <string name="show_all_reply">查看全部回复</string>
    <string name="failed_comment">评论失败！</string>
    <string name="read_post">看帖</string>
    <string name="sofa">沙发</string>
    <string name="edit_avatar">点击设置头像</string>
    <string name="logout">退出当前帐号</string>
    <string name="edit_nickname">昵称</string>
    <string name="edit_self_introduction">自我介绍</string>
    <string name="edit_college_info">学院信息</string>
    <string name="edit_contact_way">联系方式</string>
    <string name="edit_sex">性别</string>
    <string name="save">保存</string>
    <string name="edit_info">修改个人信息</string>
    <string name="failed_load_post">加载帖子失败</string>
    <string name="failed_load_comment">加载评论失败</string>
    <string name="change_avatar">更换头像</string>
    <string name="take_photo_or_album">拍照或是从相册中选择</string>
    <string name="take_photo">拍照</string>
    <string name="album">相册选取</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="succeed_update_avatar">头像设置成功</string>
    <string name="login_now">立即登陆</string>
    <string name="login_please">登陆之后更精彩</string>
    <string name="setting">设置</string>
    <string name="update_user_info_succeed">更新成功</string>
    <string name="update_user_info_failed">更新失败</string>
    <string name="add_post_pic">添加图片</string>
    <string name="max_pic_num">最多添加三张图片</string>
    <string name="detail_info">Ta的详细资料</string>
    <string name="personal_info_def">Ta很懒，什么也没留下~</string>
    <string name="personal_posts">Ta的帖子</string>
    <string name="find_teammate">我要寻找队友</string>
    <string name="find_team">我要寻找队伍</string>
    <string name="only_find_team">只看寻找队伍</string>
    <string name="only_find_teammate">只看寻找队友</string>
    <string name="title">标题：</string>
    <string name="teammate_require">队友要求：</string>
    <string name="teammate_require_center">队友要求</string>
    <string name="teammate1">队友一：</string>
    <string name="teammate2">队友二：</string>
    <string name="teammate3">队友三：</string>
    <string name="teammate4">队友四：</string>
    <string name="add_teammate">添加队友</string>
    <string name="error_teammate">至少填写一个队友要求</string>
    <string name="message_notify0">回复了您的帖子</string>
    <string name="message_notify1">回复了您的评论</string>
    <string name="new_comments_notify">您的帖子有了回复，请前往消息界面查看</string>
    <string name="my_self_introduction">查看资料卡</string>
    <string name="logout_succeed">退出成功！</string>
    <string name="not_realize">该功能暂未实现~</string>
    <string name="please_choose_section">请先选择具体的比赛版块</string>
    <string name="favorite_succeed">收藏成功！</string>
    <string name="favorite_failed">收藏失败！</string>
    <string name="delete_favorite_succeed">取消收藏成功！</string>
    <string name="delete_favorite_failed">取消收藏失败！</string>
    <string name="is_delete_favorite">取消收藏？</string>
    <string name="ensure_logout">确认退出帐号？</string>
    <string name="clear_cache">清除缓存</string>
    <string name="ensure_clear_cache">清除后，缓存的图片需要重新下载查看。确定清除？</string>
    <string name="clear_cache_succeed">清除成功</string>
    <string name="clear_cache_failed">清除失败</string>
</resources>
