<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_username_login"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:hint="@string/input_username"
                    android:maxLines="1"
                    android:maxLength="11"
                    android:layout_marginLeft="8dp"
                    android:digits="0123456789abcdefghigklmnopqrstuvwxyz
                    ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    style="@style/edit_text_style1"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/edit_text_password_login"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:hint="@string/input_password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="11"
                    android:layout_marginLeft="8dp"
                    android:digits="0123456789abcdefghigklmnopqrstuvwxyz
                    ABCDEFGHIJKLMNOPQRSTUVWXYZ.!@#%"
                    style="@style/edit_text_style1"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_login"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_login"
                android:textStyle="bold"
                android:background="@drawable/button_style"
                android:layout_margin="8dp"/>

            <Button
                android:id="@+id/button_to_register"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:textStyle="bold"
                android:background="@drawable/button_style"
                android:layout_margin="8dp"/>

            <Button
                android:id="@+id/button_to_reset_password"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_reset_password"
                android:textStyle="bold"
                android:background="@drawable/button_style"
                android:layout_margin="8dp"/>
        </LinearLayout>
    </ScrollView>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/view_login_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>
</FrameLayout>