<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_child_info_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <TextView
            android:id="@+id/main_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/title_info"
            android:textColor="@color/colorTextOrIcons"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginRight="16dp"/>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/image0"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circle_image_view_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/header"
            app:civ_border_width="2dp"/>

        <Button
            android:id="@+id/button_login_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/circle_image_view_avatar"
            android:layout_centerHorizontal="true"
            android:background="#00ffffff"
            android:text="@string/login_now"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_my_posts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold"
                android:text="@string/my_posts"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/button_style"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/colorDivider"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>

            <Button
                android:id="@+id/button_my_favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold"
                android:text="@string/my_favorite"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/button_style"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/colorDivider"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>

            <Button
                android:id="@+id/button_show_self_introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/my_self_introduction"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/button_style"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/colorDivider"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>

            <Button
                android:id="@+id/button_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryText"
                android:textStyle="bold"
                android:text="@string/setting"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/button_style"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/colorDivider"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>

            <Button
                android:id="@+id/button_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_style"
                android:textColor="@color/colorRed"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/logout"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/colorDivider"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>