<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <EditText
                    android:id="@+id/edit_view_email_reset_password"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginLeft="8dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:digits="0123456789abcdefghigklmnopqrstuvwxyz
                    ABCDEFGHIJKLMNOPQRSTUVWXYZ@."
                    android:maxLines="1"
                    style="@style/edit_text_style1"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/button_reset_password"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_reset_password"
                android:textStyle="bold"
                android:background="@drawable/button_style"
                android:layout_margin="8dp"/>

            <Button
                android:id="@+id/button_return_login_reset"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_return_login"
                android:textStyle="bold"
                android:background="@drawable/button_style"
                android:layout_margin="8dp"/>

        </LinearLayout>
    </ScrollView>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/view_reset_password_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

</FrameLayout>