<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_child_info_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/relative_layout_bg"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image0"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/circle_image_view_edit_avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/header"
                    app:civ_border_width="2dp"/>

                <Button
                    android:id="@+id/button_edit_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/circle_image_view_edit_avatar"
                    android:layout_centerHorizontal="true"
                    android:background="#00ffffff"
                    android:text="@string/edit_avatar"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/colorDivider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/text_view_edit_nick_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="#00ffffff"
                        android:gravity="center"
                        android:text="@string/edit_nickname"
                        android:textSize="16dp"/>

                    <EditText
                        android:id="@+id/edit_text_edit_nick_name"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_weight="3"
                        android:maxLength="13"
                        android:maxLines="1"
                        style="@style/edit_text_style1"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/colorDivider"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="invisible"
                        style="@style/edit_text_style1"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:id="@+id/text_view_edit_sex"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/edit_sex"
                            android:textSize="16dp"/>

                        <RadioGroup
                            android:id="@+id/radio_group_edit_sex"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radio_button_edit_sex_male"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/male"
                                />

                            <RadioButton
                                android:id="@+id/radio_button_edit_sex_female"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/female"
                                />
                        </RadioGroup>
                    </LinearLayout>
                </FrameLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/colorDivider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/text_view_edit_self_introduction"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/edit_self_introduction"
                        android:textSize="16dp"/>

                    <EditText
                        android:id="@+id/edit_text_edit_self_introduction"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_weight="3"
                        android:maxLength="90"
                        style="@style/edit_text_style1"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/colorDivider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/text_view_edit_college_info"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/edit_college_info"
                        android:textSize="16dp"/>

                    <EditText
                        android:id="@+id/edit_text_edit_college_info"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_weight="3"
                        android:maxLength="35"
                        style="@style/edit_text_style1"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/colorDivider"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <TextView
                        android:id="@+id/text_view_edit_contact_way"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/edit_contact_way"
                        android:textSize="16dp"/>

                    <EditText
                        android:id="@+id/edit_text_edit_contact_way"
                        android:layout_width="0dp"
                        android:layout_height="35dp"
                        android:layout_weight="3"
                        android:maxLength="35"
                        style="@style/edit_text_style1"/>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp"
                    android:background="@color/colorDivider"/>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>